# avature-ats-etl-pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  input_urls.csv  pyproject.toml  requirements.txt  seed_urls.csv
.github/workflows/: cd.yml  ci.yml
core/: extensions.py  items.py  middlewares.py  pipelines.py  seed_io.py  settings.py
core/spiders/: avature_spider.py
core/tools/: __init__.py  seed_audit.py  smoke.py
data/: smoke_seed_urls.csv
docs/deployment/: aws-deployment.md
docs/runbooks/: avature-aws-runbook.md
infra/: .gitignore  app.py  bootstrap_app.py  cdk.json  config.py  scraper_config.py
infra/environments/: dev.yaml  prod.yaml
infra/sql/: 01_bronze_jobs_raw.sql  02_ops_portal_summary_raw.sql  03_silver_jobs_curated_ctas.sql  04_silver_jobs_incremental_insert.sql  05_gold_portal_daily_summary.sql  06_silver_jobs_history_snapshot_ctas.sql  07_silver_jobs_history_snapshot_incremental_insert.sql  08_gold_job_change_events.sql  09_gold_job_lifecycle_summary.sql
infra/stacks/: analytics_stack.py  base_stack.py  cost_guardrails_stack.py  dashboard_stack.py  ecr_stack.py  ecs_schedule_stack.py  ecs_stack.py  github_oidc_roles_stack.py  notifications_stack.py  runtime_alarm_stack.py  schedule_stack.py  workflow_stack.py
infra/tests/unit/: test_github_oidc_roles_stack.py  test_infra_stack.py
tests/: conftest.py
tests/fixtures/html/: amerilife_job_detail.html  astellasjapan_job_detail.html  carlyle_job_detail.html  listing_explicit_next.html  listing_joboffset_only.html
tests/unit/: test_avature_spider.py  test_seed_audit.py  test_seed_io.py  test_smoke.py  test_validation_pipeline.py
