[project]
name = "avature-ats-etl-pipeline"
version = "0.1.0"
description = "Avature ATS ETL Pipeline for data extraction, transformation, and loading."
authors = [
    { name = "Ahmed Shahriar Sakib", email = "ahmed.shahriar.sakib@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "scrapy>=2.14.1",
    "pandas>=2.2.0",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
aws = [
    "aws-cdk-lib>=2.241.0",
    "boto3>=1.42.62",
    "constructs>=10.5.1",
]

[dependency-groups]
analysis = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
dev = [
    "boto3-stubs[cloudwatch,dynamodb,ecr,ecs,events,logs,s3,sns]>=1.42.62",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty]
[tool.ty.src]
include = ["infra", "core"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
